--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,7 @@
 }
 
 .pai {
+  position: relative;
   background-color: #ecf0f1;
   width: 30%;
   margin: 10px 0px;
@@ -38,6 +39,14 @@
   border-radius: 0px;
   border-top: #333 solid 1px;
   text-align: center;
+}
+
+.pai p {
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  font-size: 20px;
+  color: #95a5a6;
 }
 
 .pai label {
