--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,8 @@
 }
 
 .main {
-  margin: 0 auto;
   position: relative;
+  margin: 0 auto;
   height: 100vh;
   width: 1000px;
   max-width: 95vw;
@@ -61,6 +61,22 @@
 input[type="radio"]:checked + label {
   background: #3498db;
   color: #fff;
+}
+
+input[type="button"] {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  transition: all 0.3s;
+  background-color: #ecf0f1;
+  width: 15%;
+  min-width: 120px;
+  border: 2px solid #95a5a6;
+}
+
+input[type="button"]:active {
+  transition: all 0s;
+  background-color: #3498db;
 }
 
 button {
